# rteb

./: CONTRIBUTING.md  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  run_ebr.sh  run_rteb.sh
ebr/: __main__.py  retrieve.py
ebr/core/: data.py  encoder.py  meta.py
ebr/datasets/: text.py
ebr/models/: bgem3.py  cohere.py  google.py  gritlm.py  openai.py  sentence_transformers.py  voyageai.py
ebr/utils/: memory.py
results/: datasets.json  models.json  results.json
rteb/: __main__.py  retrieve.py
rteb/core/: __init__.py  data.py  encoder.py  meta.py  retriever.py
rteb/core/base/: __init__.py  dataset.py  model.py
rteb/datasets/: __init__.py  multimodal.py  text.py
rteb/models/: __init__.py  amazon.py  bgem3.py  cohere.py  google.py  gritlm.py  isaacus.py  openai.py  sentence_transformers.py  voyageai.py
rteb/utils/: data.py
scripts/: create_task_results.py
